Finished and tested verifyEmail endpoint. Edited Documentation as well.
