# swagger.yaml
@@ -39,7 +39,7 @@ paths:
       - Users
       summary: Regisers new users in to the marketplace app
       operationId: dlRegister
-      description: registers in to the marketplace app, returns empty info with an error string saying if it worked or not
+      description: Registers in to the marketplace app, returns new user ID and an error string saying if it worked or not
       consumes:
       - application/json
       produces:
@@ -55,13 +55,13 @@ paths:
           description: OK
         "User Already Exists":
           description: Duplicate User has been Found
-  /verifyNum:
+  /verifyEmail:
     post:
       tags:
       - Server
-      summary: Creates the verification number and sends it out
+      summary: Creates the verification number and sends it out to email in input
       operationId: dlVerifiedNum
-      description: registers in to the marketplace app, returns empty info with an error string saying if it worked or not
+      description: Sends an email to the user's email in the input and then outputs the verification code sent to that user.
       consumes:
       - application/json
       produces:
@@ -69,12 +69,14 @@ paths:
       parameters:
       - in: body
         name: VerifiedNum
-        description: Verifys the
+        description: Verification
         schema:
-          $ref: '#/definitions/verifyNum'
+          $ref: '#/definitions/VerifyEmail'
       responses:
         "Empty Error String":
           description: OK
+        "Non-Empty Error String":
+          description: An error occured with the email sending API
           
 definitions:
   Login:
@@ -117,10 +119,14 @@ definitions:
       phoneNumber:
         type: string
         example: 4079981234
-  verifyNum:
+  VerifyEmail:
     type: object
     required:
+    - Email
     properties:
+      email:
+        type: string
+        example: fred@gmail.com
 
 host: cop4331-marketplace-98e1376d9db6.herokuapp.com
 basePath: /api
